# fastmatch-cpp

./: .gitignore  CMakeLists.txt  README.md  config.yaml  download_face_models.sh  download_models.sh
docs/: bytetrack-implementation.md  faceid.md  reid-integration.md  rtsp-optimization.md
src/: bytetrack_demo.cpp  calibration.hpp  config.hpp  feature_extraction.cpp  feature_extraction.hpp  helpers.cpp  helpers.hpp  main.cpp  object_detection.cpp  object_detection.hpp
src/bytetrack/: BYTETracker.cpp  BYTETracker.h  KalmanFilter.cpp  KalmanFilter.h  Object.h  Rect.cpp  Rect.h  STrack.cpp  STrack.h  lapjv.cpp  lapjv.h
src/faceid/: arcface.cpp  arcface.hpp  face_db.cpp  face_db.hpp  face_demo.cpp  scrfd.cpp  scrfd.hpp
